--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: "所见, 所想, 所思, 所得"
 keywords: ioser, 读书, web, node.js
 author: jun.c
 language: zh-CN
-timezone: ""
+timezone: "Asia/Shanghai"
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
