--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "7.0.0"
+    "version": "7.2.0"
   },
   "dependencies": {
     "hexo": "^7.0.0",
@@ -19,8 +19,9 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^4.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-stylus": "^3.0.1",
     "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^2.0.0",
     "hexo-symbols-count-time": "^0.7.1",
