--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,8 @@ ignore:
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ""
+  type: git
+  repo: https://github.com/singleton-altman/altman.github.io
+  branch: gh-pages
 
 theme: cactus
