--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-hide-posts": "^0.4.3",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^4.0.0",
